Fix #30904: MovieClip.objects.new() segfault when no name is passed

Made name property required for new().